<resources>
    <string name="app_name">Basic_Geo_Quiz_App</string>
    <string name="title_activity_quiz_login">Sign in</string>
    <string name="prompt_first">First Name</string>
    <string name="prompt_last">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register">Register for an Account</string>
    <string name="register_short">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters &#xD;&#xA;
    Password must contain a capital letter, lower case letter, &#xD;&#xA;
        and one of the following characters ~ ! @ # $ % ^ &amp; * ? .</string>
    <string name="login_failed">"Login failed"</string>
    <string name="question_text"> Question Text</string>
    <string name="stat_text">User\'s Statistics</string>
    <string name="stat_correct_text">User\'s Correct Answers</string>
    <string name="stat_incorrect_text">User\'s Incorrect Answers</string>
    <string name="first_name_error">Must provide a first name. &#xD;&#xA;Use only alphanumeric characters</string>
    <string name="last_name_error">Must provide a last name. &#xD;&#xA; Use only alphanumeric characters</string>
    <string name="email_error">Must provide a email address. &#xD;&#xA; &lt;username&gt;@&lt;domain&gt; .</string>
    <string name="empty_password_error">A password and repeat password must be entered.</string>
    <string name="repeat_password_error">Repeat password must match original</string>
    <string name="registration_failed">Registration failed, you may have already registered</string>

</resources>
